<resources>
    <string name="app_name">移动护理</string>
    <string name="app_copyright">版权所有：浙江和仁科技股份有限公司</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_execute">执行</string>
    <string name="btn_verify">核对</string>
    <string name="btn_save">保存</string>
    <string name="btn_exit">退出</string>
    <string name="btn_update">更新</string>
    <string name="btn_do_later">下次再说</string>
    <string name="btn_login">登录</string>
    <string name="btn_changePassword">修改密码</string>
    <string name="btn_unlock">解锁</string>
    <string name="btn_rememberPassword">记住密码</string>
    <string name="btn_clear">清除</string>
    <string name="btn_lock">锁屏</string>
    <string name="btn_delete">删除</string>
    <string name="btn_switchAccount">切换账号</string>
    <string name="btn_bed_range">床位范围</string>
    <string name="btn_serviceAddress">服务器地址</string>
    <string name="btn_cameraScan">扫描设置</string>
    <string name="btn_systemSettings">系统设置</string>
    <string name="btn_selectAll">全选</string>
    <string name="btn_selectAllCancel">取消全选</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_options">操作</string>
    <string name="btn_historyRecord">历史记录</string>
    <string name="btn_nextStep">下一步</string>
    <string name="btn_binding">绑定</string>
    <string name="btn_unbind">解绑</string>
    <string name="common_userId">账号</string>
    <string name="common_password">密码</string>
    <string name="common_inDeptInfo">在科信息</string>
    <string name="common_orderContent">医嘱内容</string>
    <string name="common_healthEduContent">教育内容</string>
    <string name="common_healthEduResult">教育结果</string>
    <string name="common_order">医嘱</string>
    <string name="common_planTime">计划时间</string>
    <string name="common_recordingTime">记录时间</string>
    <string name="common_appointmentTime">预约时间</string>
    <string name="common_finishTime">结束时间</string>
    <string name="common_operationTime">手术时间</string>
    <string name="common_confirmTime">确认时间</string>
    <string name="common_collectionTime">采集时间</string>
    <string name="common_executeTime">执行时间</string>
    <string name="common_examDept">检查科室</string>
    <string name="common_applyNo">申请单号</string>
    <string name="common_specimen">标本</string>
    <string name="common_specimenNotes">标本说明</string>
    <string name="common_STResult">皮试结果</string>
    <string name="common_operationDeptName">手术室</string>
    <string name="common_operationRoom">手术间</string>
    <string name="common_operationSequence">台次</string>
    <string name="common_operationStatus">手术状态</string>
    <string name="common_operationDoctor">手术医生</string>
    <string name="common_applyDoctor">申请医生</string>
    <string name="common_diagnose">诊断</string>
    <string name="common_operationName">拟行手术方式</string>
    <string name="common_operationScale">手术等级</string>
    <string name="common_operationAssistant">手术助手</string>
    <string name="common_executeDosage">执行剂量</string>
    <string name="common_anaesthesiaMethod">麻醉方式</string>
    <string name="common_anesthesiaDoctor">麻醉医生</string>
    <string name="common_supplyNurse">供应护士</string>
    <string name="common_bloodDoctor">输血医生</string>
    <string name="common_operationNurse">台上护士</string>
    <string name="common_executeResult">执行结果</string>
    <string name="common_processingNurse">执行人</string>
    <string name="common_verifyNurse">核对人</string>
    <string name="common_memo">备注</string>
    <string name="common_vital_signs_item">体征项</string>
    <string name="common_round_item">巡视项</string>
    <string name="common_all">全部</string>
    <string name="common_time">时间</string>
    <string name="common_emergencyTreatment">急诊</string>
    <string name="common_emergencyStatus">紧急状态</string>
    <string name="common_otherRound">其他巡视</string>
    <string name="common_infusionRound">输液巡视</string>
    <string name="common_common">普通</string>
    <string name="common_microorganism">微生物</string>
    <string name="common_signature1">签名人1</string>
    <string name="common_signature2">签名人2</string>
    <string name="common_application">工作站</string>
    <string name="common_monitorCode">监护仪条码</string>
    <string name="common_bindingDateTime">绑定时间</string>
    <string name="common_bindingNurse">绑定人</string>
    <string name="common_unbindDateTime">解绑时间</string>
    <string name="common_unbindNurse">解绑人</string>
    <string name="common_currentStatus">当前状态</string>
    <string name="common_monitorBinding">监护仪绑定</string>
    <string name="common_monitorUnbind">监护仪解绑</string>
    <string name="common_monitorBindingUnbind">监护仪解绑/绑定</string>
    <string name="message_loading">加载中...</string>
    <string name="message_Signing_on_Please_wait">正在登录，请稍后...</string>
    <string name="message_loginSuccess">登录成功</string>
    <string name="message_download_finish">下载完成</string>
    <string name="message_Installing">正在安装...</string>
    <string name="message_appUpdate">软件检测到新版本，是否现在更新？</string>
    <string name="message_appUpdate_now">软件检测到新版本，需更新后才能正常使用，请更新！</string>
    <string name="message_completed">已完成：</string>
    <string name="message_inputUserId">请输入账号</string>
    <string name="message_inputPassword">请输入密码</string>
    <string name="message_inputNewPassword">请输入新密码</string>
    <string name="message_inputServiceAddress">请输入服务器地址</string>
    <string name="message_inputSpecimenCode">请输入标本号</string>
    <string name="message_inputMemo">请输入备注信息</string>
    <string name="message_inputMonitorCode">请输入监护仪码</string>
    <string name="message_changePasswordSuccess">修改密码成功</string>
    <string name="message_login_again">请重新登录</string>
    <string name="message_cameraScan_desc">设置是否允许使用设备摄像头扫描</string>
    <string name="message_sure_exitApp">确定退出？</string>
    <string name="message_executeSuccess">执行成功</string>
    <string name="message_revokeSuccess">撤回成功</string>
    <string name="message_accountVerify_beforeRevokeOrder">在医嘱撤回之前，需要对您进行身份验证！</string>
    <string name="message_empty_commitData">没有可提交的数据！</string>
    <string name="message_emptyVitalData">体征数据为空！</string>
    <string name="message_saveSuccess">数据保存成功！</string>
    <string name="message_updateSuccess">数据更新成功！</string>
    <string name="message_deleteSuccess">数据删除成功！</string>
    <string name="message_unknown_scanCode">未识别的二维码/条码！</string>
    <string name="message_pleaseScanPatientCode">请扫描患者腕带！</string>
    <string name="message_pleaseScanEmpCard">请扫描员工牌！</string>
    <string name="message_notFoundPatient">未找到该患者！</string>
    <string name="message_canNotSwitchPatient">当前界面不允许切换患者！</string>
    <string name="message_canNotDoThisOperation">当前界面不允许此操作！</string>
    <string name="message_pleaseSwitchToOrdersModule">请切换到医嘱模块！</string>
    <string name="message_notFoundOrders">未找到对应医嘱！</string>
    <string name="message_executedOrder">该条医嘱已被执行过！</string>
    <string name="message_notOrderCode">非医嘱条码！</string>
    <string name="message_notCurrentPatientOrders">非当前患者的医嘱！</string>
    <string name="message_notCurrentPatientOrdersOrCanNotExecute">非当前患者的医嘱，或当前医嘱不不可执行！</string>
    <string name="message_notCurrentPatientOrdersOrCanNotExecuteOrUnrelatedWithPageOrder">非当前患者的医嘱，或当前医嘱不不可执行,或您扫描的医嘱与当前页面显示医嘱无关！</string>
    <string name="message_notCurrentPatient">非当前患者！</string>
    <string name="message_notFoundPatientInfusionOrder">当前患者没有正在执行的输液医嘱、或未找到您所扫描的医嘱，请尝试刷新页面或重新扫描！</string>
    <string name="message_sure_deleteNurseRoundData">确定删除该组巡视数据吗？</string>
    <string name="message_selectHealthEduItem">请先选择您要宣教的项目，然后点击“下一步”！</string>
    <string name="message_NoHealthEduItemSelected_sureToNextStep">您尚未选择任何健康宣教项目，确定要进入“下一步”操作？</string>
    <string name="message_verifyNotice">本次执行的列表中，含有需要签名核对的医嘱，请另一操作人签名核对！</string>
    <string name="message_skinTestExecuteWithOtherTogether">不可与未执行的皮试处置医嘱一起执行，请检查您的操作</string>
    <string name="message_pleaseExecuteSkinTestDrugFirst">该皮试处置医嘱暂不可录入结果，请核查对应皮试用药医嘱是否执行！</string>
    <string name="message_nextVerifyExecuteWithOtherTogether">需要签名核对的医嘱，不可与其它医嘱一起执行</string>
    <string name="message_canNotExecuteMultiGroupSkinTest">不可一次执行多条皮试处置医嘱！</string>
    <string name="message_monitorBindingOrUnbindSuccess">监护仪绑定/解绑成功！</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_systemSettings">系统设置</string>
    <string name="title_module_sickbedList">床位一览</string>
    <string name="title_module_ordersExecute">医嘱执行</string>
    <string name="title_module_vitalSignsCollect">体征采集</string>
    <string name="title_module_admissionAssessment">入院评估</string>
    <string name="title_module_nurseRound">护理巡视</string>
    <string name="title_module_drugCheck">药品核对</string>
    <string name="title_module_operationScheduled">手术安排</string>
    <string name="title_module_examReport">检查报告</string>
    <string name="title_module_labReport">检验报告</string>
    <string name="title_module_healthEducation">健康宣教</string>
    <string name="title_activity_other">其他</string>
    <string name="title_activity_orderInfo">医嘱详情</string>
    <string name="title_activity_STOrderExecute">皮试医嘱执行</string>
    <string name="title_activity_examOrderExecute">检查医嘱执行</string>
    <string name="title_activity_labOrderExecute">检验医嘱执行</string>
    <string name="title_activity_operationOrderExecute">手术医嘱执行</string>
    <string name="title_activity_infusionsOrderExecute">输液医嘱执行</string>
    <string name="title_activity_vital_signs_history">体征历史</string>
    <string name="title_activity_vital_signs_edit">体征编辑</string>
    <string name="title_activity_vital_signs_chart">体征趋势图</string>
    <string name="title_operation_scheduled_info">手术安排详情</string>
    <string name="title_operation_nurse_round_history">护理巡视历史</string>
    <string name="title_activity_health_edu_history">健康宣教历史</string>
    <string name="title_activity_stopwatch">秒表</string>
    <string name="title_dialog_notice">提示</string>
    <string name="title_dialog_warning">警告</string>
    <string name="title_dialog_error">错误</string>
    <string name="title_dialog_appUpdate">软件更新</string>
    <string name="title_dialog_selectUserId">选择账号</string>
    <string name="title_dialog_changePasswordSuccess">修改密码成功</string>
    <string name="title_dialog_exitApp">退出程序</string>
    <string name="title_dialog_delete">删除</string>
    <string name="title_specimenCollection">标本采集</string>
    <string name="title_accountVerify">账号验证</string>
    <string name="title_doubleSignatureOrder">医嘱双签名</string>
    <string name="error_login_emptyUserId">账号不能为空</string>
    <string name="error_login_emptyPassword">密码不能为空</string>
    <string name="error_login_emptyNewPassword">新密码不能为空</string>
    <string name="error_login_emptyMonitorCode">监护仪码不能为空</string>
    <string name="error_login_canNotFoundLoginApplication">未找到可登录的工作站</string>
    <string name="error_serviceAddress_formatError">服务器地址格式错误</string>
    <string name="error_executeError">执行失败</string>
    <string name="error_saveError">保存失败</string>
    <string name="error_revokeError">撤回失败</string>
    <string name="error_emptyPatient">该床位无患者！</string>
    <string name="error_emptySignature">签名人不可为空！</string>
    <string name="error_canNotExecuteOrder">当前医嘱不可操作！</string>
    <string name="error_bindingUnbindError">绑定/解绑失败！</string>
    <string name="field_patientID">患者ID：</string>
    <string name="field_sex">性别：</string>
    <string name="field_birthDate">出生年月：</string>
    <string name="field_birthDateTime">出生时间：</string>
    <string name="field_identity">身份：</string>
    <string name="field_nation">民族：</string>
    <string name="field_info">信息：</string>
    <string name="field_admissionNo">住院号：</string>
    <string name="field_marital">婚姻：</string>
    <string name="field_age">年龄：</string>
    <string name="field_chargeType">费别：</string>
    <string name="field_diagnose">诊断：</string>
    <string name="field_operationTime">手术时间：</string>
    <string name="field_operationStatus">手术状态：</string>
    <string name="field_operationDoctor">手术医生：</string>
    <string name="field_operationName">拟行手术方式：</string>
</resources>